# cli_eduardo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
src/cli_eduardo/: cli.py
src/cli_eduardo/adapters/: validate.py
src/cli_eduardo/domain/: findings.py
src/cli_eduardo/infrastructure/: azure_openai_gateway.py  claude_gateway.py  sandbox.py
src/cli_eduardo/use_cases/: gateway.py  validate_lgd_report.py
tests/: conftest.py  test_cli.py
tests/adapters/: test_validate.py
tests/domain/: test_findings.py
tests/infrastructure/: test_azure_openai_gateway.py  test_claude_gateway.py  test_sandbox.py
tests/use_cases/: test_validate_lgd_report.py
