[project]
name = "cli-eduardo"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "agent: opt-in integration tests that invoke the real Claude/Azure runtime — excluded from CI",
]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
